# langgraph-learning

./: .env.example  pyproject.toml
01_sequential_workflows/: 01_test_running.ipynb  02_simple_sequence.ipynb  03_prompt_chaining_sequence.ipynb
02_parallel_workflows/: 01_normal_sequential_workflow.ipynb  02_UPSC_essay_workflow.ipynb
03_conditional_outputs/: 01_quadratic_equation.ipynb  02_review_reply_workflow.ipynb
04_iterative_workflows/: 01_x_post_generator.ipynb
05_basic_chatbot_langgraph/: 01_basic_rag_chatbot.ipynb
06_persistence/: 01_basic_rag_chatbot.ipynb  01_persistence.ipynb
07_chatbot_with_ui/: README.md  langgraph_backend.py  streamlit_frontend.py
08_human_in_loop/: 01_hitl.ipynb
