[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.4.18",
    "langsmith>=0.7.20",
]
